tests/snapshots/parser_snapshots__parser_all@ast-163.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_null_assignable_to_nullable_union.of
---
Ok(
    Program {
        items: [
            Item {
                kind: TypeAlias(
                    TypeAliasDecl {
                        name: "Opt",
                        generics: [],
                        ty: Union(
                            [
                                Primitive(
                                    Int64,
                                ),
                                Primitive(
                                    Null,
                                ),
                            ],
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 5,
                    len: 4,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    VarDecl(
                                        "x",
                                        Some(
                                            Named(
                                                "Opt",
                                                [],
                                            ),
                                        ),
                                        Some(
                                            Literal(
                                                Null,
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 2,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
