tests/snapshots/parser_snapshots__parser_all@ast-165.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_logical_op_requires_bool.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        BinaryOp(
                                            Literal(
                                                Int(
                                                    "5",
                                                ),
                                            ),
                                            And,
                                            Literal(
                                                Int(
                                                    "5",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
