tests/snapshots/parser_snapshots__parser_all@ast-168.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_struct_init_extra_field_errors.of
---
Err(
    "unexpected token '{'",
)
