tests/snapshots/parser_snapshots__parser_all@ast-169.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_struct_init_and_member_access.of
---
Err(
    "unexpected token '{'",
)
