tests/snapshots/parser_snapshots__parser_all@ast-17.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/17_union_ast.of
---
Err(
    "unexpected token comment",
)
