tests/snapshots/parser_snapshots__parser_all@ast-172.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/validator/p5_method_call_via_member.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "S",
                        is_extern: false,
                        generics: [],
                        fields: [],
                        methods: [
                            FunctionDecl {
                                name: "m",
                                has_self_param: false,
                                is_extern: false,
                                generics: [],
                                return_type: None,
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: None,
                                    },
                                ),
                                span: Span {
                                    line: 1,
                                    col: 20,
                                    len: 8,
                                },
                            },
                        ],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "s",
                                ty: Named(
                                    "S",
                                    [],
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        Call(
                                            Member(
                                                Variable(
                                                    "s",
                                                ),
                                                "m",
                                            ),
                                            [],
                                            [],
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 2,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
