tests/snapshots/parser_snapshots__parser_all@ast-173.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_struct_init_extra_field_errors.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "S",
                        is_extern: false,
                        generics: [],
                        fields: [
                            FieldDecl {
                                name: "x",
                                ty: Primitive(
                                    Int64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        StructInit(
                                            Named(
                                                "S",
                                                [],
                                            ),
                                            [
                                                (
                                                    "x",
                                                    Literal(
                                                        Int(
                                                            "5",
                                                        ),
                                                    ),
                                                ),
                                                (
                                                    "y",
                                                    Literal(
                                                        Int(
                                                            "6",
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 2,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
