tests/snapshots/parser_snapshots__parser_all@ast-174.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_unknown_member_errors.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "S",
                        is_extern: false,
                        generics: [],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "s",
                                ty: Named(
                                    "S",
                                    [],
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        Member(
                                            Variable(
                                                "s",
                                            ),
                                            "x",
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 2,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
